--- a/etiquetasSelectores.html
+++ b/etiquetasSelectores.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="prism.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="personalize.css">
-    <link rel="stylesheet" href="copyCode.js">
+    
 </head>
 
 <body>
@@ -246,6 +246,7 @@
     <h3>Siguiente lección:</h3>
     <button onclick="location.href='etiquetasSelectores2.html'">Hoja de estilo y selectores básicos #2</button><br><br>
 
+    <script src="copyCode.js"></script>
 </body>
 
 </html>
