--- a/etiquetasSelectores2.html
+++ b/etiquetasSelectores2.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selectores 2</title>
 </head>
+
 <body>
     <h1>Selectores 2</h1>
+    <p>Si hay varios elementos del mismo tipo en una página web, los <strong>Selectores</strong> como
+        <strong>h1</strong> y <strong>h2</strong> o <strong>p</strong> cambian todos los elementos.</p>
+
+    <style>
+        h1 {
+            font: "Arial";
+            color: green;
+        }
+
+        h2 {
+            font: "Arial";
+            color: blue;
+        }
+
+        p {
+            font: "Arial";
+            font-weight: normal;
+        }
+    </style>
+
+    <h1>Not On Time Magazine</h1>
+    <p>Always first with the last</p>
+    <h2>Car Trends</h2>
+    <p>Coal powered cars. The future?</p>
+    <h2>Fashion latest</h2>
+    <p>Flared jeans</p>
+
+    <p>Si queremos seleccionar uno o más elementos, podemos establecer un atributo de <strong>class</strong></p>
 </body>
+
 </html>
